test_cases/test_unused.c
int x = 5;
int y = 7;
int z = 6;
int m = x + "Weam";
string s = "hello";
int func(int a, int b) {
    a = 1;
    b = 5;
    int c = a + b;
}


// int test = func(x, y);

// int err = func(z,y); // error: z is not defined
